--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -3,7 +3,8 @@ name: App service Build and Deploy Python package to Azure Web App
 on:
   [push]
 
-# CONFIGURATION
+## CONFIGURATION
+# this is a test
 # For help, go to https://github.com/Azure/Actions
 #
 # 1. Set up the following secrets in your repository:
